style: avoid margin for extra padding

--- a/src/ui/components/TransactionList/style.less
+++ b/src/ui/components/TransactionList/style.less
@@ -5,7 +5,7 @@
         margin: 0;
         margin-bottom: 8px !important;
     }
-    * {
+    .mb-8 {
         margin-bottom: 8px !important;
     }
 }
